<resources>
    <string name="app_name">Tp2-M14(Mob)-MaximeCaron</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="connect">Connect</string>
    <string name="create_account">Create Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="reset">Reset</string>
    <string name="disconnect">Disconnect</string>
    <string name="txtreturn"><![CDATA[< Return]]></string>
</resources>